--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "threejs": "*",
     "ui-router": "~0.2.15",
     "toastr": "~2.1.2",
-    "angular-recaptcha": "~2.2.5"
+    "angular-recaptcha": "~2.2.5",
+    "responsive-bootstrap-toolkit": "responsive-toolkit#~2.5.0"
   }
 }
