--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "ui-router": "~0.2.15",
     "toastr": "~2.1.2",
     "angular-recaptcha": "~2.2.5",
-    "responsive-bootstrap-toolkit": "responsive-toolkit#~2.5.0"
+    "responsive-bootstrap-toolkit": "responsive-toolkit#~2.5.0",
+    "normalize-css": "normalize.css#~3.0.3"
   }
 }
