--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,6 @@
     "angular-recaptcha": "~2.2.5",
     "responsive-bootstrap-toolkit": "responsive-toolkit#~2.5.0",
     "normalize-css": "normalize.css#~3.0.3",
-    "font-mfizz": "~2.0.1"
+    "svg-porn": "jaredslogos#*"
   }
 }
